# Travelo

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
agents/: __init__.py  general_chat_agent.py
agents/attraction/: attraction_agent.py
agents/budget/: budget_agent.py
agents/crowd/: crowd_agent.py
agents/food/: food_agent.py
agents/itinerary/: itinerary_agent.py
agents/manager/: manager_agent.py  orchestrator.py
agents/news/: news_agent.py
agents/route/: route_agent.py
agents/weather/: weather_agent.py
data/: README.md  city_costs.json  city_metadata.json  crowd_rules.json  holidays.json
database/: schema.sql  seed_data.sql
docs/: api_documentation.md  architecture.md  setup_guide.md
models/: attraction.py  budget.py  itinerary.py  trip.py
prompts/: attraction_prompt.txt  budget_prompt.txt  crowd_prompt.txt  itinerary_prompt.txt  manager_prompt.txt  news_prompt.txt  route_prompt.txt  weather_prompt.txt
routes/: api_routes.py  dashboard_routes.py  home_routes.py  planner_routes.py
services/: __init__.py  attraction_service.py  budget_service.py  crowd_service.py  currency_service.py  data_loader.py  food_service.py  gemini_service.py  geocoding_service.py  history_service.py  langchain_manager_service.py  news_service.py  route_service.py  sources_service.py  weather_service.py
static/css/: dashboard.css  style.css
static/js/: dashboard.js  planner.js
templates/: base.html  dashboard.html  error.html  home.html  itinerary.html  planner.html
tests/: test_agents.py  test_api_routes.py  test_routes.py  test_services.py  test_sources_service.py  test_tools.py
tools/: __init__.py  attraction_tools.py  budget_tools.py  food_tools.py  news_tools.py  route_tools.py  weather_tools.py
