[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travelo"
version = "1.0.0"
description = "Agentic travel planning with specialist agents and live data providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = ["pytest==8.3.2"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
# Flask app — deps only; do not pip-install this repo as a wheel
skip-install = true
dev-mode = false
dependencies = [
    "Flask==3.0.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "pytest==8.3.2",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "{root}"

[tool.hatch.envs.default.scripts]
app = "python app.py"
test = "pytest {args:tests}"
